
<resources>
    <string name="app_name">IBO</string>
    <string name="fsl_translator">FSL Translator</string>
    <string name="ob_1">Connect with our Deaf friends through IBO\'s FSL detector.</string>
    <string name="ob_2">Wow! Great Detection. Express your \nFSL and IBO will detect it.</string>
    <string name="ob_3">I can do it too. Talk to our Deaf friends \nwith IBO\'s implementation of  \nFingerspelling.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="developer_description">TechKnow is a group of like-minded individuals committed to excellence and aims to connect people together through the use of technology.</string>
    <string name="bigkas_description">IBO is an Android application that outputs the detected Filipino Sign Language in real time and displays the corresponding fingerspelling for the text entered.</string>
    <string name="step_1">Open IBO application and select the scan button.</string>
    <string name="step_2">Position the camera at waist level to start the detection. Upon successful detection, the text will be displayed.</string>
    <string name="step_3">To translate into fingerspelling, simply input the text to be translated</string>
    <string name="step_4">Tap the Tutorial button and choose from the 15 words you want to learn the gesture and Filipino translation. </string>
    <string name="step_5">You can also check whether the gestures you have done is correct through the Check the Gesture button.</string>
    <string name="ibo">IBO</string>
    <string name="how_to_use_ibo">How to use IBO?</string>
    <string name="contact_us">Contact Us</string>
    <string name="techknow_feutech_gmail_com">techknow.feutech@gmail.com</string>
    <string name="developer">Developer</string>
    <string name="techknow">TechKnow</string>
    <string name="let_s">Let\'s</string>
    <string name="communicate">communicate</string>
    <string name="skip">SKIP</string>
    <string name="fsl">FSL</string>
    <string name="recognition">recognition</string>
    <string name="fingerspelling">fingerspelling</string>
    <string name="get_started">Get Started</string>
    <string name="clear">Clear</string>
    <string name="translate">Translate</string>
    <string name="write_something">Write something</string>
    <string name="fingerspelling_formal">Fingerspelling Translator</string>
    <string name="fingerspell">Fingerspell</string>
    <string name="feedback_1">Give Feedback</string>
    <string name="feedback_2">How did we do?</string>
    <string name="feedback_3">Care to share more about it??</string>
    <string name="feedback_4">Your review means a lot to us and we will improve based on this.</string>
    <string name="publish">Publish Feedback</string>
    <string name="fifteenword">Learn Basic FSL</string>
    <string name="check_your_gegsture">Check your Gesture</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
</resources>